--- a/bluefish/data/highlighting.in
+++ b/bluefish/data/highlighting.in
@@ -293,29 +293,37 @@ Tcl:Variable:1:\\$[a-z0-9\\-_]+:":2:^(top|String \\(double quoted\\))$:#000066::
 Tcl:Argument:1:\\-[a-z]+::2::#009966::2:1:
 Tcl:Data Types:1:\\b(array|blob|glob|list|set|string)\\b::2::#660099::2:1:
 Tcl:Numbers:1:[0-9\\.]+::2::#999900::2:1:
-xml:Format:1:<\\?:\\?>:1:^top$:#cc0000::2:0:
+xml:Format:1:<\\?:\\?>:1:^top$:#000000::2:1:
 xml:Tag:1:<((/)?[a-z0-9\:-]+):[^?-]?>:1::#000000::0:0:
 xml:Tag Name:1:1::3:^Tag$:#005676::2:0:
 xml:Attribute:1:(?\:xmlns\\\:)?([a-z\\-]*=)("[^"]*")::2:^Tag$:#3cb300::1:0:
 xml:Attribute Content:1:2::3:^Attribute$:#ff7600::1:0:
 xml:DocType:1:<!DOCTYPE [a-z0-9]+:>:1::#b35300::0:0:
-xml:Entity:1:[\\[]:[\\]]:1:^DocType$:#777777::2:0:
+xml:Entity:1:[\\[]:[\\]]:1:^DocType$:#b35300::2:1:
 xml:Comment:0:<!--:-->:1:^top|DocType|Entity$:#AAAAAA::1:2:
 xml:Character Data:1:<!\\[CDATA\\[:\\]\\]>:1::#a2b300::0:0:
 xml:Character Entity:1:&[^;]+;::2::#9b0054::0:0:
-stylesheet:Media Selector:1:\\@media (?\:print|screen) \\{:\\}:1:^top$:#cc0000::2:2:
-stylesheet:Selector:1:\\*|\\+|>|(?\:a|body|abbr|acronym|address|applet|area|b|big|bdo|blockquote|br|button|caption|center|cite|code|col|colgroup|dd|del|dfn|dir|div|dl|dt|em|embed|fieldset|form|frame|frameset|h\\d+|head|hr|html|i|iframe|img|input|ins|kbd|label|legend|li|map|menu|noframes|noscript|object|ol|optgroup|option|p|pre|q|s|samp|select|small|span|strike|strong|sub|sup|table|tbody|td|textarea|tfoot|th|thead|tr|tt|u|ul|var)\\b::2:^top|Media Selector$:#cc0000::2:1:
-stylesheet:Identifiers:1:[#.][A-Za-z0-9\\-_]+::2::#cc0000::1:2:
-stylesheet:Attribute Identifiers:1:\\[[a-z0-9\\.\\-_\\\:]+[\\|~]?(?\:=(?\:[\\w]*|(?\:"[\\w]*")?))?\\]:"\\]:2:^top$:#990000::1:1:
-stylesheet:Pseudo-selectors:1:\\\:(?\:lang\\([a-z]{2}(?\:_[A-Z]{2})?\\)|(?\:active|after|before|first(?\:\\-(?\:child|letter|line))|first|focus|hover|lang|left|link|right|visited)\\b)::2::#990000::2:1:
-stylesheet:Braces:1:[\\{\\[][^\\{\\}]*[\\}\\]]::2:^top|Media Selector$:#0099cc::1:1:
-stylesheet:Comment:1:\\/\\*:\\*\\/:1:^top|Braces$:#888888::0:0:
-stylesheet:Declaration:0:(?\:azimuth|background(?\:\\-(?\:attachment|color|image|position|repeat))?|border(?\:\\-(?\:(bottom|left|right|top)(?\:\\-(?\:color|style|width))?|collapse|color|spacing|style|width|spacing)?)?|bottom|caption\\-side|center|clear|clip|color|content|counter\\-(?\:increment|reset)|cue(?\:\\-(?\:after|before))?|cursor|direction|display|elevation|empty\\-cells|float|font(?\:\\-(?\:family|size(?\:\\-adjust)?|stretch|style|variant|weight))?|height|left|letter\\-spacing|line\\-height|list\\-style(?\:\\-(?\:image|position|type))?|(?\:margin|padding)(?\:\\-(?\:bottom|left|right|top|offset))?|marker\\-offset|marks|(?\:max|min)\\-(?\:height|width)|orphans|outline(?\:\\-(?\:color|style|width))?|overflow|page\\-break\\-(?\:after|before|inside)|pause(?\:\\-(?\:after|before))?|pitch(?\:\\-range)?|play\\-during|position|quotes|richness|right|size|speak(?\:\\-(?\:header|numeral|punctuation))?|speech\\-rate|stress|table\\-layout|text\\-(?\:align|decoration|indent|shadow|transform)?|top|unicode\\-bidi|vertical\\-align|visibility|voice\\-family|volume|white\\-space|widows|width|word\\-spacing|z\\-index)\\s*\:::2:^Braces$:#000099::2:0:
-stylesheet:Color:0:#[0-9A-Fa-f]{3,6}|rgb|(?\:aqua|black|blue|fuchsia|gray|green|lime|maroon|navy|olive|purple|red|silver|teal|transparent|white|yellow)\\b::2:^Braces$:#cc0099::1:0:
-stylesheet:Misc:0:(?\:absolute|always|attr|auto|avoid|(?\:base|in|over|under)line|bidi\\-override|blink|block|bold(?\:er)?|both|bottom|capitalize|center|circle|collapse|cursive|dashed|decimal|disc|dotted|double|embed|fantasy|fixed|groove|help|hidden|inherit|inset|(?\:in|out)side|invert|italic|justify|larger?|left|lighter|line\\-through|list\\-item|(?\:lower|upper)(?\:case|\\-alpha|\\-roman)|ltr|medium|middle|monospace|no\\-repeat|none|normal|nowrap|oblique|par\\-num|pre|relative|repeat(?\:\\-(?\:x|y))?|ridge|right|rtl|(?\:sans\\-)?serif|scroll|small(?\:er|\\-caps)?|solid|square|sub|super|static|table\\-(?\:caption|cell)|table(?\:\\-(?\:column|footer|header|row)(?\:\\-group)?)?|text\\-(?\:bottom|top)|thick|thin|top|url|visible|xx?\\-(?\:large|small))\\b::2:^Braces$:#663399::1:0:
-stylesheet:Length:1:([0-9]+\\.?[0-9]*(\\%|cm|em|ex|in|mm|pc|pt|px)?)(?![a-z\\-\:])::2:^Braces$:#009966::1:0:
+stylesheet:Media:1:\\@media\\s*(?\:(?\:(?\:aural|braille|emboss|handheld|print|projection|screen|tty|tv)[\\s,]*)+|all)+::2:^top$:#cc0000::2:2:
+stylesheet:Media Braces:1:\\{:\\}:1:^top$:#cc0000::2:2:
+stylesheet:Media Selector:1:\\@page::2:^top$:#cc0000::2:2:
+stylesheet:Selector:1:\\*|\\+|>|(?\:a|body|abbr|acronym|address|applet|area|b|big|bdo|blockquote|br|button|caption|center|cite|code|col|colgroup|dd|del|dfn|dir|div|dl|dt|em|embed|fieldset|form|frame|frameset|h\\d+|head|hr|html|i|iframe|img|input|ins|kbd|label|legend|li|map|menu|noframes|noscript|object|ol|optgroup|option|p|pre|q|s|samp|select|small|span|strike|strong|sub|sup|table|tbody|td|textarea|tfoot|th|thead|tr|tt|u|ul|var)\\b::2:^top|Media Braces$:#cc0000::2:1:
+stylesheet:Identifiers:1:[#.][A-Za-z0-9\\-_]+::2:^top|Media Braces$:#cc0000::1:2:
+stylesheet:Attribute Identifiers:1:\\[[a-z0-9\\.\\-_\\\:]+[\\|~]?(?\:=(?\:[\\w]*|(?\:"[\\w]*")?))?\\]:"\\]:2:^top|Media Braces$:#990000::1:1:
+stylesheet:Pseudo-selectors:1:\\\:(?\:lang\\([a-z]{2}(?\:_[A-Z]{2})?\\)|(?\:active|after|before|first(?\:\\-(?\:child|letter|line))|first|focus|hover|lang|left|link|right|visited)\\b)::2:^top|Media Braces$:#990000::2:1:
+stylesheet:Braces:1:[\\{\\[][^\\{\\}]*[\\}\\]]::2:^top|Media Braces$:#0099cc::1:1:
+stylesheet:Comment:1:\\/\\*:\\*\\/:1:^top|Braces|Media Braces$:#888888::1:1:
+stylesheet:Declaration:0:(?\:azimuth|background(?\:\\-(?\:attachment|color|image|position|repeat))?|border(?\:\\-(?\:(bottom|left|right|top)(?\:\\-(?\:color|style|width))?|collapse|color|spacing|style|width|spacing)?)?|bottom|caption\\-side|center|clear|clip|color|content|counter\\-(?\:increment|reset)|cue(?\:\\-(?\:after|before))?|cursor|direction|display|elevation|empty\\-cells|float|font(?\:\\-(?\:family|size(?\:\\-adjust)?|stretch|style|variant|weight))?|height|left|letter\\-spacing|line\\-height|list\\-style(?\:\\-(?\:image|position|type))?|(?\:margin|padding)(?\:\\-(?\:bottom|left|right|top|offset))?|marker\\-offset|marks|(?\:max|min)\\-(?\:height|width)|orphans|outline(?\:\\-(?\:color|style|width))?|overflow|page\\-break\\-(?\:after|before|inside)|pause(?\:\\-(?\:after|before))?|pitch(?\:\\-range)?|play\\-during|position|quotes|richness|right|size|speak(?\:\\-(?\:header|numeral|punctuation))?|speech\\-rate|stress|table\\-layout|text\\-(?\:align|decoration|indent|shadow|transform)?|top|unicode\\-bidi|vertical\\-align|visibility|voice\\-family|volume|white\\-space|widows|width|word\\-spacing|z\\-index)\\s*\:::2:^Braces$:#000099::2:1:
+stylesheet:Azimuth:1:(?\:(?\:left|right)wards|(?\:center(?\:\\-(?\:left|right))?|(?\:(?\:far\\-)?(?\:left|right)(?\:\\-side)?))\\s*(?\:behind)?)(?![a-z\\-\:])::2:^Braces$:#663399::1:1:
+stylesheet:Color:1:(?\:activecaption|appworkspace|background|button(?\:face|highlight|shadow|text)?|captiontext|graytext|highlight(?\:text)?|inactivecaption(?\:text)?|info(?\:background|text)?|menu(?\:text)?|scrollbar|threed(?\:(?\:dark|light)?shadow|face|highlight)?|window(?\:frame|text)?)(?![a-z\\-\:])::2:^Braces$:#663399::1:1:
+stylesheet:Color Hex:1:(?\:#[0-9A-Fa-f]{3,6}|rgb|aqua|background|black|blue|fuchsia|gray|green|lime|maroon|navy|olive|purple|red|silver|teal|face|transparent|white|yellow)(?![a-z\\-\:])::2:^Braces$:#cc0099::1:1:
+stylesheet:Cursor:1:(?\:crosshair|default|help|move|pointer|(?\:e|ne|nw|n|se|sw|s|w)\\-resize|text|wait)(?![a-z\\-\:])::2:^Braces$:#663399::1:1:
+stylesheet:Font Stretch:1:(?\:wider|narrower|(?\:(?\:(?\:extra|semi|ultra)\\-)?(?\:condensed|expanded)))(?![a-z\\-\:])::2:^Braces$:#663399::1:1:
+stylesheet:List:1:(?\:armenian|circle|cjk\\-ideographic|decimal(\\-leading\\-zero)?|disc|georgian|hebrew|(?\:hiragana|katakana)(?\:\\-iroha)?|(?\:lower|upper)\\-(?\:alpha|latin|roman)|lower\\-greek)(?![a-z\\-\:])::2:^Braces$:#663399::1:1:
+stylesheet:Voice Family:1:(?\:announcer|carlos|child|comedian|female|juliet|lani|male|romeo|trinoids)(?![a-z\\-\:])::2:^Braces$:#663399::1:1:
+stylesheet:Misc:1:(?\:above|absolute|always|attr|auto|avoid|(?\:base|in|over|under)line|below|bidi\\-override|blink|block|bold(?\:er)?|both|bottom|capitalize|(?\:small\\-)?caption|center|circle|(?\:no\\-)?(?\:open|close)\\-quote|code|collapse|compact|continuous|cursive|dashed|digits|disc|dotted|double|embed|fantasy|faster|fixed|groove|hebrew|hid(?\:e|den)|(?\:high|low)(?\:er)?|icon|inherit|(?\:in|out)(?\:set|side)|invert|italic|justify|larger?|left|level|lighter|line\\-through|list\\-item|(?\:lower|upper)case|ltr|marker|medium|message\\-box|middle|mix|monospace|no\\-repeat|none|normal|nowrap|oblique|once|par\\-num|pre|rect|relative|repeat(?\:\\-(?\:x|y))?|ridge|right|rtl|run\\-in|(?\:sans\\-)?serif|scroll|show|silent|slower|small(?\:er|\\-caps)?|solid|spell\\-out|square|status\\-bar|sub|super|static|table\\-(?\:caption|cell)|table(?\:\\-(?\:column|footer|header|row)(?\:\\-group)?)?|text\\-(?\:bottom|top)|thick|thin|top|url|visible|(?\:x\\-)?(?\:fast|loud|slow|soft)|x\\-(?\:high|low)|xx?\\-(?\:large|small))(?![a-z\\-\:])::2:^Braces$:#663399::1:1:
+stylesheet:Length:1:\\-?[0-9.](?\:\\%|cm|deg|em|ex|in|k?hz|mm|ms|pc|pt|px)?(?![a-z\\-\:])::2:^Braces$:#009966::1:1:
 stylesheet:Reference:1:\\![\\w\\-]+::2:^Braces$:#cc0000::1:2:
-stylesheet:Symbols:1:[\\.]::2:^Braces$:#009966::0:0:
+stylesheet:Symbols:1:[\\,]::2:^top|Media Braces|Braces$:#000000::1:1:
 stylesheet:Plaintext:1:[a-z]+::2:^Braces$:#000000::1:1:
-stylesheet:String (double quoted):1:":[^\\\\]":1:^top|Braces$:#006699::0:2:
-stylesheet:String (single quoted):1:':[^\\\\]':1:^top|Braces$:#006699::0:2:
+stylesheet:String (double quoted):1:":[^\\\\]":1:^top|Braces$:#006699::1:2:
+stylesheet:String (single quoted):1:':[^\\\\]':1:^top|Braces$:#006699::1:2:
