--- a/data/highlighting.in
+++ b/data/highlighting.in
@@ -310,7 +310,7 @@ stylesheet:Selector:1:\\*|\\+|>|(?\:a|body|abbr|acronym|address|applet|area|b|bi
 stylesheet:Identifiers:1:[#.][A-Za-z0-9\\-_]+::2:^top|Media Braces$:#cc0000::1:2:
 stylesheet:Attribute Identifiers:1:\\[[a-z0-9\\.\\-_\\\:]+[\\|~]?(?\:=(?\:[\\w]*|(?\:"[\\w]*")?))?\\]:"\\]:2:^top|Media Braces$:#990000::1:1:
 stylesheet:Pseudo-selectors:1:\\\:(?\:lang\\([a-z]{2}(?\:_[A-Z]{2})?\\)|(?\:active|after|before|first(?\:\\-(?\:child|letter|line))|first|focus|hover|lang|left|link|right|visited)\\b)::2:^top|Media Braces$:#990000::2:1:
-stylesheet:Braces:1:[\\{\\[][^\\{\\}]*[\\}\\]]::2:^top|Media Braces$:#0099cc::1:1:
+stylesheet:Braces:1:[\\{][^\\{\\}]*[\\}]::2:^top|Media Braces$:#0099cc::1:1:
 stylesheet:Comment:1:\\/\\*:\\*\\/:1:^top|Braces|Media Braces$:#888888::1:1:
 stylesheet:Declaration:0:(?\:azimuth|background(?\:\\-(?\:attachment|color|image|position|repeat))?|border(?\:\\-(?\:(bottom|left|right|top)(?\:\\-(?\:color|style|width))?|collapse|color|spacing|style|width|spacing)?)?|bottom|caption\\-side|center|clear|clip|color|content|counter\\-(?\:increment|reset)|cue(?\:\\-(?\:after|before))?|cursor|direction|display|elevation|empty\\-cells|float|font(?\:\\-(?\:family|size(?\:\\-adjust)?|stretch|style|variant|weight))?|height|left|letter\\-spacing|line\\-height|list\\-style(?\:\\-(?\:image|position|type))?|(?\:margin|padding)(?\:\\-(?\:bottom|left|right|top|offset))?|marker\\-offset|marks|(?\:max|min)\\-(?\:height|width)|orphans|outline(?\:\\-(?\:color|style|width))?|overflow|page\\-break\\-(?\:after|before|inside)|pause(?\:\\-(?\:after|before))?|pitch(?\:\\-range)?|play\\-during|position|quotes|richness|right|size|speak(?\:\\-(?\:header|numeral|punctuation))?|speech\\-rate|src|stress|table\\-layout|text\\-(?\:align|decoration|indent|shadow|transform)?|top|unicode\\-bidi|vertical\\-align|visibility|voice\\-family|volume|white\\-space|widows|width|word\\-spacing|z\\-index)\\s*\:::2:^Braces$:#000099::2:1:
 stylesheet:Azimuth:1:(?\:(?\:left|right)wards|(?\:center(?\:\\-(?\:left|right))?|(?\:(?\:far\\-)?(?\:left|right)(?\:\\-side)?))\\s*(?\:behind)?)(?![a-z\\-\:])::2:^Braces$:#663399::1:1:
@@ -325,5 +325,5 @@ stylesheet:Length:1:\\-?[0-9.](?\:\\%|cm|deg|em|ex|in|k?hz|mm|ms|pc|pt|px)?(?![a
 stylesheet:Reference:1:\\![\\w\\-]+::2:^Braces$:#cc0000::1:2:
 stylesheet:Symbols:1:[\\,]::2:^top|Media Braces|Braces$:#000000::1:1:
 stylesheet:Plaintext:1:[a-z]+::2:^Braces$:#000000::1:1:
-stylesheet:String (double quoted):1:":[^\\\\]":1:^top|Braces$:#006699::1:2:
+stylesheet:String (double quoted):1:":[^\\\\]":1:^top|Braces|Attribute Identifiers$:#006699::1:2:
 stylesheet:String (single quoted):1:':[^\\\\]':1:^top|Braces$:#006699::1:2:
