--- a/data/bluefish.desktop.in
+++ b/data/bluefish.desktop.in
@@ -1,13 +1,13 @@
 [Desktop Entry]
+Encoding=UTF-8
 Name=Bluefish Editor @BF_APP_PACKAGE_ADDSTRING@
 Name[de]=Bluefish Editor @BF_APP_PACKAGE_ADDSTRING@
 Comment=Web Development Editor @BF_APP_PACKAGE_ADDSTRING@
 Comment[de]=Editor für Web-Entwickler @BF_APP_PACKAGE_ADDSTRING@
-Exec=@PACKAGE@ -n
+Exec=@PACKAGE@ %F
 Icon=@BF_APP_ICON@
 Terminal=false
 Type=Application
-Categories=Application;Development;WebDevelopment;GTK;GNOME;
-Encoding=UTF-8
 StartupNotify=true
+Categories=Application;Development;WebDevelopment;GTK;GNOME;
 MimeType=text/html;text/css;text/x-javascript;text/x-python;text/x-perl;application/x-php;text/x-java;application/bluefish-project;text/javascript;text/x-php;application/x-cgi;application/x-javascript;application/x-perl;application/x-python;application/xhtml+xml;text/mathml;text/x-csrc;text/x-chdr;text/x-dtd;text/x-sql;text/xml;
