--- a/bluefish/debian/rules
+++ b/bluefish/debian/rules
@@ -29,9 +29,7 @@ config.status: configure
 	CFLAGS="$(CFLAGS)" ./configure \
 		--prefix=/usr \
 		--mandir=\$${prefix}/share/man \
-		--with-icon-path=\$${prefix}/share/pixmaps \
-		--with-freedesktop_org-menu=\$${prefix}/share/applications \
-		--with-freedesktop_org-mime=\$${prefix}/share/mime \
+		--without-icon-path \
 		--without-gnome2_4-mime \
 		--without-gnome2_4-appreg \
 		--disable-update-databases
@@ -48,7 +46,7 @@ build-stamp: config.status
 clean:
 	dh_testdir
 	dh_testroot
-	-rm -f build-stamp configure-stamp
+	-rm -f build-stamp
 	
 	# Add here commands to clean up after the build process.
 	-$(MAKE) distclean
